crates/crucible-tui/src/welcome/snapshots/crucible_tui__welcome__tests__ascii@45.snap
---
source: crates/crucible-tui/src/welcome/tests.rs
expression: "dump(&welcome.rows(columns, glyphs), columns)"
---
<Strong>CRUCIBLE</>                                     
anthropic/claude-sonnet-5                    
<Quiet>~/code/crucible-code</>
