crates/crucible-tui/src/welcome/snapshots/crucible_tui__welcome__tests__no_sessions@80.snap
---
source: crates/crucible-tui/src/welcome/tests.rs
expression: "dump(&welcome.rows(columns, glyphs), columns)"
---
<Accent>╭─ </><Strong>crucible</> <Quiet>v0.0.8</><Accent> ────────────────────────────────────────────────────────────╮</>
<Accent>│</>                                  <Accent>│</> <Strong>Recent sessions</>                           <Accent>│</>
<Accent>│</>  <Strong>▄▄▄ ▄▄▄ █  █ ▄▄▄ █ ▄▄▄ █   ▄▄▄</>  <Accent>│</>                                           <Accent>│</>
<Accent>│</>  <Strong>█   █▄▄ █  █ █   █ █▄█ █   █▄▄</>  <Accent>│</> <Quiet>No earlier session for this workspace</>     <Accent>│</>
<Accent>│</>  <Strong>▀▄▄ █ █ ▀▄▄▀ ▀▄▄ █ █▄█ █▄▄ █▄▄</>  <Accent>│</>                                           <Accent>│</>
<Accent>│</>                                  <Accent>│</> <Quiet>─────────────────────────────────────────</> <Accent>│</>
<Accent>│</>  <Quiet>~/code/crucible-code</>            <Accent>│</>                                           <Accent>│</>
<Accent>│</>                                  <Accent>│</> <Strong>Tips</>                                      <Accent>│</>
<Accent>│</>                                  <Accent>│</>                                           <Accent>│</>
<Accent>│</>                                  <Accent>│</> <Quiet>·</> <Accent>/</>          opens the command list       <Accent>│</>
<Accent>│</>                                  <Accent>│</> <Quiet>·</> <Accent>\ enter</>    adds a line without sending  <Accent>│</>
<Accent>│</>                                  <Accent>│</> <Quiet>·</> <Accent>shift+tab</>  steps the permission mode    <Accent>│</>
<Accent>│</>                                  <Accent>│</> <Quiet>·</> <Accent>ctrl+c</>     clears the line typed so far <Accent>│</>
<Accent>╰──────────────────────────────────────────────────────────────────────────────╯</>
