crates/crucible-tui/src/welcome/snapshots/crucible_tui__welcome__tests__sessions@45.snap
---
source: crates/crucible-tui/src/welcome/tests.rs
expression: "dump(&welcome.rows(columns, glyphs), columns)"
---
<Strong>CRUCIBLE</>                                     
claude-sonnet-5                              
<Quiet>~/code/crucible-code</>
