crates/crucible-tui/src/welcome/snapshots/crucible_tui__welcome__tests__sessions@79.snap
---
source: crates/crucible-tui/src/welcome/tests.rs
expression: "dump(&welcome.rows(columns, glyphs), columns)"
---
<Accent>╭─ </><Strong>crucible</> <Quiet>v0.0.8</><Accent> ───────────────────────────────────────────────────────────╮</>
<Accent>│</>                                                                             <Accent>│</>
<Accent>│</> <Strong>CRUCIBLE</>                                                                    <Accent>│</>
<Accent>│</> <Quiet>~/code/crucible-code</>                                                        <Accent>│</>
<Accent>│</>                                                                             <Accent>│</>
<Accent>│</> <Strong>Recent sessions</>                                                             <Accent>│</>
<Accent>│</>                                                                             <Accent>│</>
<Accent>│</> <Quiet>1</>  a search that stops partway                                       <Quiet>2h ago</> <Accent>│</>
<Accent>│</> <Quiet>2</>  rule replacement on windows                                    <Quiet>yesterday</> <Accent>│</>
<Accent>│</> <Quiet>3</>  column counting in the tail                                       <Quiet>3d ago</> <Accent>│</>
<Accent>│</>                                                                             <Accent>│</>
<Accent>│</> <Quiet>───────────────────────────────────────────────────────────────────────────</> <Accent>│</>
<Accent>│</>                                                                             <Accent>│</>
<Accent>│</> <Strong>Tips</>                                                                        <Accent>│</>
<Accent>│</>                                                                             <Accent>│</>
<Accent>│</> <Quiet>·</> <Accent>/</>          opens the command list                                         <Accent>│</>
<Accent>│</> <Quiet>·</> <Accent>shift+tab</>  steps the permission mode                                      <Accent>│</>
<Accent>│</> <Quiet>·</> <Accent>ctrl+c</>     clears the line typed so far                                   <Accent>│</>
<Accent>╰─────────────────────────────────────────────────────────────────────────────╯</>
